[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cursor.png" type="Texture" id=1]
[ext_resource path="res://Projectiles/projectile.gd" type="Script" id=2]
[ext_resource path="res://entities/Health.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="projectile" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = -0.0175421
shape = SubResource( 1 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 3 )
max_health = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_body_exited"]
